Switched the marker in the details element off and fixed some spacings and selectors.

--- a/css/index.css
+++ b/css/index.css
@@ -313,9 +313,11 @@ h4 {
   font-size: 21px;
   color: #ffbf48; }
 
-.features__lists--last {
-  padding-block-end: 72px;
-  margin-block-end: 0; }
+.features__lists::-webkit-details-marker {
+  display: none; }
+
+.features__list_item:last-child {
+  padding-block-end: 72px; }
 
 @media (min-width: 768px) {
   .features {
@@ -328,7 +330,7 @@ h4 {
     padding-inline-start: 797px; }
   .features__category {
     padding-block-start: 259px; }
-  .features__lists--last {
+  .features__list_item:last-child {
     padding-block-end: 259px; }
   .features__lists--description {
     margin-inline-end: 370px; } }
